need to correct navbar on mobile

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,13 +1,14 @@
 body {
     height: 100%;
     background: {
-        image: url("/static/img/sky.jpg");
+        image: url("http://wilakeweather.com/wp-content/uploads/2012/08/cloud-fluffy-lamb.jpg");
         position: center;
         repeat: no-repeat;
         size: cover;
     }
 }
 
+#home{width: 100%; display: inline-block;}
 a:hover { 
     text-decoration:none;
     color:#f5bf5c;
@@ -42,7 +43,7 @@ a:hover {
     border: solid 2px #f5bf5c;
     display: flex;
     flex-direction: column;
-    margin: 60px 80px;
+    margin: 80px 80px;
     background-color: #fafafa;
     text-align: justify;
     padding: 20px;
@@ -51,15 +52,25 @@ a:hover {
         margin-bottom: 20px;
         @extend .headingcolor;
     }
+    
+    h4 {
+        color:#f5bf5c;
+    }
 
     p {
         margin-top: 0px;
+        font-size: 20px;
     }
 }
 
+.blog-section-small{
+    @extend .blog-section;
+    margin-top: 0;
+}
+
 .blog-img {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     float: left;
     margin: 6px 20px 0px 0px;
 }
@@ -82,8 +93,10 @@ a:hover {
 
 
 .request-label {
+    color:#f5bf5c;
     font: {
         weight:bold;
+        size: 20px;
     }
 }
 
@@ -94,6 +107,8 @@ a:hover {
     background-color: #aac4e9;
     &::placeholder {
         padding-left: 5px;;
+        font-size: 18px;
+        color: #fdfdfd;
     }
 }
 
@@ -109,12 +124,22 @@ a:hover {
     margin: 20px;
 }
 
-.pph{display:inline-block;
-    margin: 0 auto;
+.pph{
+    margin: 2% 7% 3% 13%;
     width: 80%;
+    padding: 0;
+    padding-left:8px;
 }
 
 .linkedin{
-    margin: 0 auto;
-    width: 93%;
+    margin: 0 7% 0 13%;
+    width: 80%;
+    padding: 0;
+}
+
+.project-img {
+    height: 90%;
+    width: 96%;
+    display: inline-block;
+    margin: 5% 2%;
 }
